tests/baselines/reference/importElisionConstEnumMerge1.errors.txt
tests/cases/conformance/constEnums/merge.ts(1,10): error TS2440: Import declaration conflicts with local declaration of 'Enum'.


==== tests/cases/conformance/constEnums/enum.ts (0 errors) ====
    export const enum Enum {
      One = 1,
    }
    
==== tests/cases/conformance/constEnums/merge.ts (1 errors) ====
    import { Enum } from "./enum";
             ~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Enum'.
    namespace Enum {
      export type Foo = number;
    }
    export { Enum };
    
==== tests/cases/conformance/constEnums/index.ts (0 errors) ====
    import { Enum } from "./merge";
    Enum.One;
    